yaml/my-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-api-deployment
    labels:
        app: my-api
spec:
    replicas: 5
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    selector:
        matchLabels:
            app: my-api
    template:
        metadata:
            labels:
                app: my-api
        spec:
            containers:
            -   name: my-api
                image: registry.gitlab.com/drmckay-kirill/netk8s/myapi
                ports:
                -   name: main-port
                    containerPort: 5000
                resources:
                    requests:
                        memory: "64Mi"
                        cpu: "100m"
                    limits:
                        memory: "256Mi"
                        cpu: "200m"
                livenessProbe:
                    httpGet:
                        path: /api/Probe/live
                        port: main-port
                    failureThreshold: 1
                    periodSeconds: 5
                startupProbe:
                    httpGet:
                        path: /api/Probe/live
                        port: main-port
                    failureThreshold: 3
                    periodSeconds: 10
            imagePullSecrets:
            -   name: gitlab-cred
