yaml/my-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: my-api
  type: ClusterIP
